--- a/angular_admin/src/app/components/navbar/navbar.component.html
+++ b/angular_admin/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,4 @@
-<p>navbar works!</p>
+<div class="container">
+    <div class="title">My Beautiful Flowers</div>
+    <div class="user">Dominic Vega</div>
+</div>
