--- a/angular_admin/src/app/app.component.html
+++ b/angular_admin/src/app/app.component.html
@@ -1,12 +1,18 @@
-<div>
-  <div>
+<div class="wrapper">
+  <div class="header">
     <app-navbar></app-navbar>
   </div>
-  <div>
-    <app-sidebar></app-sidebar>
-  </div>
-  <div>
-    <router-outlet />
+  <div class="body">
+    <mat-drawer-container class="example-container">
+      <mat-drawer mode="side" opened>
+        <app-sidebar></app-sidebar>
+      </mat-drawer>
+      <mat-drawer-content>
+        <div class="content">
+          <router-outlet />
+        </div>
+      </mat-drawer-content>
+    </mat-drawer-container>
   </div>
 </div>
 
