--- a/angular_admin/src/app/pages/products/product-create/product-create.component.html
+++ b/angular_admin/src/app/pages/products/product-create/product-create.component.html
@@ -1,6 +1,38 @@
-<form (ngSubmit)="onSubmit()">
-    <input type="text" name="name" [(ngModel)]="formData.name" placeholder="Name">
-    <input type="email" name="email" [(ngModel)]="formData.email" placeholder="Email">
+<!-- <form (ngSubmit)="onSubmit()">
+    <input type="text" name="product_name" [(ngModel)]="formData.product_name" placeholder="Name">
+    <input type="email" name="product_code" [(ngModel)]="formData.product_code" placeholder="Email">
     <button type="submit">Submit</button>
+</form> -->
+
+<form class="example-form" (ngSubmit)="onSubmit()">
+    <mat-form-field class="example-full-width">
+        <mat-label>Name</mat-label>
+        <input matInput placeholder="" name="product_name" [(ngModel)]="formData.product_name">
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <mat-label>Code</mat-label>
+        <input matInput placeholder="" name="product_name" [(ngModel)]="formData.product_code">
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <mat-label>Group</mat-label>
+        <input matInput placeholder="" name="product_name" [(ngModel)]="formData.product_group">
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <mat-label>Description</mat-label>
+        <input matInput placeholder="" name="product_name" [(ngModel)]="formData.description">
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <mat-label>Product Price</mat-label>
+        <input matInput placeholder="" name="product_name" [(ngModel)]="formData.product_price">
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <mat-label>Retail Price</mat-label>
+        <input matInput placeholder="" name="product_name" [(ngModel)]="formData.retail_price">
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <mat-label>Retail Discount Price</mat-label>
+        <input matInput placeholder="" name="product_name" [(ngModel)]="formData.retail_discount_price">
+    </mat-form-field>
+    <button mat-raised-button color="primary" type="submit">Save</button>
 </form>
 
