--- a/angular_admin/src/app/app.component.html
+++ b/angular_admin/src/app/app.component.html
@@ -2,17 +2,17 @@
   <div class="header">
     <app-navbar></app-navbar>
   </div>
-  <div class="body">
-    <mat-drawer-container class="example-container">
-      <mat-drawer mode="side" opened>
-        <app-sidebar></app-sidebar>
-      </mat-drawer>
-      <mat-drawer-content>
-        <div class="content">
-          <router-outlet />
-        </div>
-      </mat-drawer-content>
-    </mat-drawer-container>
-  </div>
+
+  <mat-drawer-container class="drawer-container">
+    <mat-drawer mode="side" opened class="side">
+      <app-sidebar></app-sidebar>
+    </mat-drawer>
+    <mat-drawer-content>
+      <div class="content">
+        <router-outlet />
+      </div>
+    </mat-drawer-content>
+  </mat-drawer-container>
+
 </div>
 
