--- a/angular_admin/src/app/app.component.sass
+++ b/angular_admin/src/app/app.component.sass
@@ -1,13 +1,15 @@
 .wrapper
-   
+    height: 100vh
+    display: flex
+    flex-direction: column
 
-    .body
+    .drawer-container
+        height: 100%
 
-        .example-container 
-            width: auto
-            height: 94vh
-            background: #eee
+        .side
+            width: 280px
+            background-color: #2D323E
+        .content
+            margin: 20px
 
-            .content
-                margin: 20px
-
+           
