--- a/angular_admin/src/app/components/navbar/navbar.component.sass
+++ b/angular_admin/src/app/components/navbar/navbar.component.sass
@@ -1,9 +1,2 @@
-.container
-    display: flex
-    justify-content: space-between
-    padding: 0 20px
-    height: 50px
-    font-size: 20px
-    align-items: center
-    background-color: #08BE10
-    color: white
+.example-spacer 
+    flex: 1 1 auto
