--- a/angular_admin/src/app/components/sidebar/sidebar.component.html
+++ b/angular_admin/src/app/components/sidebar/sidebar.component.html
@@ -1,27 +1,34 @@
 <div class="wrapper">
-    <div class="container">
-        <ul>
-            <li>
-                <p>HOME</p>
-                <a [routerLink]="['/']">
-                    <span>DASHBOARD</span>
-                </a>
-            </li>
-            <li>
-                <p>SALES</p>
-                <a [routerLink]="['/products/create']">
-                    <span>ORDERS</span>
-                </a>
-            </li>
-            <li>
-                <p>INVENTORY</p>
-                <a [routerLink]="['/products/create']">
-                    <span>CATALOGS</span>
-                </a>
-                <a [routerLink]="['/products']">
-                    <span>PRODUCTS</span>
-                </a>
-            </li>
-        </ul>
+    <div class="header">
+        <h3 class="title">Dominic Anuta Vega</h3>
+        <p class="email">doms12.vegs&#64;gmail.com</p>
+    </div>
+    <div class="content">
+        <mat-nav-list>
+            <span>HOME</span>
+            <mat-list-item routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                    <mat-icon matListItemIcon [style.color]="'#FFFFFF'">dashboard</mat-icon>
+                    <a matListItemTitle>Dashboard</a>
+            </mat-list-item>
+            <span>SALES</span>
+            <mat-list-item routerLink="/orders" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                <mat-icon matListItemIcon [style.color]="'#FFFFFF'">shopping_cart</mat-icon>
+                <a matListItemTitle>Orders</a>
+            </mat-list-item>
+            <span>CONTENT</span>
+            <mat-list-item routerLink="/site" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                <mat-icon matListItemIcon [style.color]="'#FFFFFF'">store</mat-icon>
+                <a matListItemTitle>Site</a>
+            </mat-list-item>
+            <span>INVENTORY</span>
+            <mat-list-item routerLink="/categories" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                <mat-icon matListItemIcon [style.color]="'#FFFFFF'">folder</mat-icon>
+                <a matListItemTitle>Categories</a>
+            </mat-list-item>
+            <mat-list-item routerLink="/products" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                <mat-icon matListItemIcon [style.color]="'#FFFFFF'">shopping_basket</mat-icon>
+                <a matListItemTitle>Products</a>
+            </mat-list-item>
+        </mat-nav-list>
     </div>
 </div>
