--- a/angular_admin/src/app/components/sidebar/sidebar.component.sass
+++ b/angular_admin/src/app/components/sidebar/sidebar.component.sass
@@ -1,32 +1,32 @@
+.active 
+    background-color: #3F51B5
+
 .wrapper
-    padding: 20px
-    margin-right: 20px
-    
-    .container
-      
-        ul
-            list-style: none
+    color: #FFFFFF
+    .header
+        background-color: #1E2129
+        padding: 24px 0 64px 0
+        display: flex
+        flex-direction: column
+        align-items: center
+        font-weight: 400
+
+        .title
+            font-size: 16px
+            margin: 0
+            letter-spacing: 1px
+        .email
+            margin: 0
+            font-size: 12px
+            color: gray
+    .content
+        a
+            color: white
             
-            li
-                margin-bottom: 10px
-                display: flex
-                flex-direction: column
-                
-                p
-                    font-size: 12px
-                    color: gray
-                a
-                    text-decoration: none
-                    color: white
-                    cursor: pointer
-                    padding: 10px 20px
-                    width: 100%
-                    &:hover
-                        background-color: gray
-                    
-                span
-                    cursor: pointer
-                    padding: 10px 20px
-                    width: 100%
-                    &:hover
-                        background-color: gray
+        span
+            color: gray
+            margin: 15px
+            font-size: 12px
+
+            .icon
+                color: white
