--- a/angular_admin/src/app/components/sidebar/sidebar.component.html
+++ b/angular_admin/src/app/components/sidebar/sidebar.component.html
@@ -15,16 +15,24 @@
                 <mat-icon matListItemIcon [style.color]="'#FFFFFF'">shopping_cart</mat-icon>
                 <a matListItemTitle>Orders</a>
             </mat-list-item>
-            <span>CONTENT</span>
+            <span>SITE</span>
             <mat-list-item routerLink="/site" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                 <mat-icon matListItemIcon [style.color]="'#FFFFFF'">store</mat-icon>
-                <a matListItemTitle>Site</a>
+                <a matListItemTitle>Pages</a>
+            </mat-list-item>
+            <mat-list-item routerLink="/site" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                <mat-icon matListItemIcon [style.color]="'#FFFFFF'">store</mat-icon>
+                <a matListItemTitle>Sections</a>
+            </mat-list-item>
+            <mat-list-item routerLink="/site" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                <mat-icon matListItemIcon [style.color]="'#FFFFFF'">store</mat-icon>
+                <a matListItemTitle>Catalogs</a>
+            </mat-list-item>
+            <mat-list-item routerLink="/site" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                <mat-icon matListItemIcon [style.color]="'#FFFFFF'">store</mat-icon>
+                <a matListItemTitle>Integrations</a>
             </mat-list-item>
             <span>INVENTORY</span>
-            <mat-list-item routerLink="/categories" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                <mat-icon matListItemIcon [style.color]="'#FFFFFF'">folder</mat-icon>
-                <a matListItemTitle>Categories</a>
-            </mat-list-item>
             <mat-list-item routerLink="/products" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                 <mat-icon matListItemIcon [style.color]="'#FFFFFF'">shopping_basket</mat-icon>
                 <a matListItemTitle>Products</a>
