--- a/angular_admin/src/app/pages/products/products.component.sass
+++ b/angular_admin/src/app/pages/products/products.component.sass
@@ -1,5 +1,110 @@
 .wrapper
+    height: 100%
+
     .header
-        display: flex
-        justify-content: space-between
-        color: #08BE10
+        height: 15%
+        padding: 0 20px
+        .container
+            display: flex
+            justify-content: space-between
+            color: #3F51B5
+            padding-top: 30px
+            .filter
+                width: 50%
+                display: flex
+                button
+                    background-color: #3F51B5
+                .search
+                    margin-right: 10px
+                    width: 50%
+                    border-style: solid
+                    border-width: 1px
+                    border-radius: 50px
+                    display: flex
+                    align-items: center
+                    justify-content: space-evenly
+                    background-color: #FFFFFF
+                    .input-search
+                        width: 80%
+                        border: none
+                        padding: 10px
+                        margin: 5px
+                        font-size: 14px
+                        &:focus
+                            outline: none
+    
+    .content
+        height: 85%
+        padding: 0 20px
+        .table-container 
+            height: 90%
+            overflow: auto
+            table
+                .cells
+                    cursor: pointer
+                    &:hover
+                        background-color: #3F51B5
+                        color: #FFFFFF
+        .paginator-container
+            height: 10%
+
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    // .wrapper
+//     display: flex
+//     flex-direction: column
+//     padding: 20px
+//     align-items: stretch
+//     .header
+//         display: flex
+//         justify-content: space-between
+//         color: #3F51B5
+//         margin-bottom: 20px
+//         .filter
+//             width: 50%
+//             display: flex
+
+//             button
+//                 background-color: #3F51B5
+//             .search
+//                 margin-right: 10px
+//                 width: 50%
+//                 border-style: solid
+//                 border-width: 1px
+//                 border-radius: 50px
+//                 display: flex
+//                 align-items: center
+//                 justify-content: space-evenly
+//                 background-color: #FFFFFF
+
+//                 .input-search
+//                     width: 80%
+//                     border: none
+//                     padding: 10px
+//                     margin: 5px
+//                     font-size: 14px
+//                     &:focus
+//                         outline: none
+
+//     .table-section
+//         height: 100vh
+//         padding: 20px
+//         background-color: red
+//         .table-container 
+//             height: 200px
+//             overflow: auto
+//             background-color: red
+//             table 
+//                 width: 100%
+            
+    
+            
+            
+            
