--- a/angular_admin/src/app/app.component.sass
+++ b/angular_admin/src/app/app.component.sass
@@ -10,6 +10,6 @@
             width: 280px
             background-color: #2D323E
         .content
-            margin: 20px
+            height: 100%
 
            
