--- a/angular_admin/src/app/pages/products/products.component.html
+++ b/angular_admin/src/app/pages/products/products.component.html
@@ -1,33 +1,47 @@
 <div class="wrapper">
     <div class="header">
-        
-        <h1>All Products</h1>
-        <a [routerLink]="['/products/create']">
-            <button mat-raised-button color="primary">Add New Product</button>
-        </a>
-        
+        <div class="container">
+            <h1>All Products</h1>
+            <div class="filter">
+                <div class="search">
+                    <mat-icon matListItemIcon [style.color]="'gray'">search</mat-icon>
+                    <input placeholder="Search" value="" class="input-search">
+                </div>
+                <button mat-icon-button [style.color]="'#FFFFFF'">
+                    <mat-icon>filter_list</mat-icon>
+                </button>
+            </div>
+            <a [routerLink]="['/products/create']">
+                <button mat-raised-button color="primary">Add New Product</button>
+            </a>
+        </div>
     </div>
-    <table mat-table [dataSource]="products" class="mat-elevation-z8">
-        <ng-container matColumnDef="Code">
-            <th mat-header-cell *matHeaderCellDef> Code </th>
-            <td mat-cell *matCellDef="let element"> {{element.product_code}} </td>
-        </ng-container>
-        <ng-container matColumnDef="Name">
-            <th mat-header-cell *matHeaderCellDef> Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.product_name}} </td>
-        </ng-container>
-        <ng-container matColumnDef="Retail Price">
-            <th mat-header-cell *matHeaderCellDef> Retail Price </th>
-            <td mat-cell *matCellDef="let element"> {{element.retail_price}} </td>
-        </ng-container>
-        <ng-container matColumnDef="Product Price">
-            <th mat-header-cell *matHeaderCellDef> Product Price </th>
-            <td mat-cell *matCellDef="let element"> {{element.product_price}} </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        
-    </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
-    </mat-paginator>
+    <div class="content">
+        <section class="table-container mat-elevation-z8" tabindex="0">
+            <table mat-table [dataSource]="products" class="mat-elevation-z8">
+                <ng-container matColumnDef="Code">
+                    <th mat-header-cell *matHeaderCellDef> Code </th>
+                    <td mat-cell *matCellDef="let element"> {{element.product_code}} </td>
+                </ng-container>
+                <ng-container matColumnDef="Name">
+                    <th mat-header-cell *matHeaderCellDef> Name </th>
+                    <td mat-cell *matCellDef="let element"> {{element.product_name}} </td>
+                </ng-container>
+                <ng-container matColumnDef="Retail Price">
+                    <th mat-header-cell *matHeaderCellDef> Retail Price </th>
+                    <td mat-cell *matCellDef="let element"> {{element.retail_price}} </td>
+                </ng-container>
+                <ng-container matColumnDef="Product Price">
+                    <th mat-header-cell *matHeaderCellDef> Product Price </th>
+                    <td mat-cell *matCellDef="let element"> {{element.product_price}} </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="cells"></tr>
+            </table>
+        </section>
+        <div class="paginator-container">
+            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
+            </mat-paginator>
+        </div>
+    </div>
 </div>
