--- a/angular_admin/src/app/pages/products/product-create/product-create.component.sass
+++ b/angular_admin/src/app/pages/products/product-create/product-create.component.sass
@@ -1,8 +1,40 @@
-.example-form 
-    min-width: 150px
-    max-width: 500px
-    width: 100%
-    .example-full-width 
-        width: 100%
+.wrapper
+    height: 100%
+    padding: 0 20px
+    .form-container
+        height: 100%
+
+        .header
+            height: 15%
+            .container
+                display: flex
+                justify-content: space-between
+                color: #3F51B5
+                padding-top: 30px
+                .title
+                    display: flex
+                    gap: 10px
+                    align-items: center
+                    h1
+                        margin: 0
+        .content
+            height: 85%
+            .tab-container
+                border-style: solid gray
+                border-width: 1px
+                border-radius: 10px
+                box-shadow: 0px 0px 10px 0px rgba(90, 87, 87, 0.5)
+                height: 95%
+                overflow: auto
+                .form-content
+                    padding: 20px
+                    .font-input 
+                        width: 100%
+
+
+    
+    
+    
+
 
 
