--- a/angular_admin/src/app/pages/products/products.component.html
+++ b/angular_admin/src/app/pages/products/products.component.html
@@ -1,7 +1,10 @@
 <div class="wrapper">
     <div class="header">
         <div class="container">
-            <h1>All Products</h1>
+            <div class="title">
+                <mat-icon matListItemIcon>shopping_basket</mat-icon>
+                <h1>All Products</h1>
+            </div>
             <div class="filter">
                 <div class="search">
                     <mat-icon matListItemIcon [style.color]="'gray'">search</mat-icon>
@@ -18,7 +21,7 @@
     </div>
     <div class="content">
         <section class="table-container mat-elevation-z8" tabindex="0">
-            <table mat-table [dataSource]="products" class="mat-elevation-z8">
+            <table mat-table [dataSource]="products">
                 <ng-container matColumnDef="Code">
                     <th mat-header-cell *matHeaderCellDef> Code </th>
                     <td mat-cell *matCellDef="let element"> {{element.product_code}} </td>
