--- a/angular_admin/src/app/pages/products/products.component.sass
+++ b/angular_admin/src/app/pages/products/products.component.sass
@@ -9,14 +9,20 @@
             justify-content: space-between
             color: #3F51B5
             padding-top: 30px
+            .title
+                display: flex
+                gap: 10px
+                align-items: center
+                h1
+                    margin: 0
             .filter
-                width: 50%
+                width: 30%
                 display: flex
                 button
                     background-color: #3F51B5
                 .search
                     margin-right: 10px
-                    width: 50%
+                    width: 90%
                     border-style: solid
                     border-width: 1px
                     border-radius: 50px
@@ -39,7 +45,9 @@
         .table-container 
             height: 90%
             overflow: auto
+            
             table
+                
                 .cells
                     cursor: pointer
                     &:hover
