--- a/angular_admin/src/app/components/sidebar/sidebar.component.html
+++ b/angular_admin/src/app/components/sidebar/sidebar.component.html
@@ -16,7 +16,7 @@
                 <a matListItemTitle>Orders</a>
             </mat-list-item>
             <span>SITE</span>
-            <mat-list-item routerLink="/site" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+            <mat-list-item routerLink="/pages/create" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                 <mat-icon matListItemIcon [style.color]="'#FFFFFF'">store</mat-icon>
                 <a matListItemTitle>Pages</a>
             </mat-list-item>
