--- a/angular_admin/src/app/pages/page/page-create/page-create.component.html
+++ b/angular_admin/src/app/pages/page/page-create/page-create.component.html
@@ -1,7 +1,4 @@
-<editor [(ngModel)]="html" [init]="config"></editor>
+<editor [(ngModel)]="content" [init]="config" (onEditorChange)="onEditorContentChange($event)"></editor>
 
-<button (click)="retrieveHtml()">Retrieve HTML</button>
+<button (click)="retrieveHtml()" mat-flat-button color="primary">Save</button>
 
-<div class="wrapper">
-  <div [innerHTML]="html"></div>
-</div>
